@@ -1,4 +1,4 @@
-                            GMime, version 2.6.4
+                            GMime, version 2.6.5
                    by Jeffrey Stedfast <fejj@gnome.org>
 
 
