@@ -12,8 +12,8 @@ AC_PREREQ(2.54)
 #
 m4_define([gmime_major_version], [2])
 m4_define([gmime_minor_version], [6])
-m4_define([gmime_micro_version], [4])
-m4_define([gmime_interface_age], [4])
+m4_define([gmime_micro_version], [5])
+m4_define([gmime_interface_age], [5])
 m4_define([gmime_binary_age],
           [m4_eval(100 * gmime_minor_version + gmime_micro_version)])
 m4_define([gmime_version],
@@ -571,9 +571,10 @@ if test "x$enable_mono" = "xyes"; then
 	AC_SUBST(API_VERSION)
 fi
 
-AC_ARG_WITH([gacdir], AC_HELP_STRING([--with-gacdir], [Specify the Global Assembly Cache root directory]),,
-            [with_gacdir=$prefix/lib])
-gacdir=$(cd "$with_gacdir" && pwd)
+AC_ARG_WITH([gacdir], AC_HELP_STRING([--with-gacdir], [Specify the Global Assembly Cache root directory]),
+            [[with_gacdir=$withval]],
+            [[with_gacdir=\${prefix}/lib]])
+gacdir=$with_gacdir
 AC_SUBST(gacdir)
 
 dnl Extra libs
