@@ -1,5 +1,11 @@
 2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>
 
+	* README: Bumped version
+
+	* configure.ac: Bumped version to 2.6.5
+
+2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>
+
 	* gmime/gmime-parser.c (parser_scan_message_part): Make sure that
 	a boundary doesn't appear before we start scanning for the
 	headers.
